12805 sun_fc: in C++11 this 'throw' will call 'terminate' because destructors default to 'noexcept'

../common/Listener.cc: In destructor 'Listener::~Listener()':
../common/Listener.cc:84:6: error: in C++11 this 'throw' will call 'terminate' because destructors default to 'noexcept' [-Werror=c++11-compat]
   84 |      throw;
      |      ^~~~~
cc1plus: all warnings being treated as errors

Change-Id: I1453b0f3b3ffa16db3aef92cf41278f1ed3510ca