usr/src/lib/sun_fc/common/Listener.cc
@@ -66,22 +66,15 @@ Listener::Listener(void *userData) {
 
 /**
  * @memo	    Free up a generic listener, keeping global list in sync.
- * @exception	    ... underlying exceptions will be thrown
  */
 Listener::~Listener() {
 	Lockable::lock(&staticLock);
-	try {
-	    for (ListenerIterator tmp = listeners.begin();
-			tmp != listeners.end(); tmp++) {
+	for (ListenerIterator tmp = listeners.begin();
+	    tmp != listeners.end(); tmp++) {
 		if (*tmp == this) {
-		    listeners.erase(tmp);
-		    Lockable::unlock(&staticLock);
-		    return;
+			listeners.erase(tmp);
+			break;
 		}
-	    }
-	} catch (...) {
-	    Lockable::unlock(&staticLock);
-	    throw;
 	}
 	Lockable::unlock(&staticLock);
 }
